syntax = "proto3";
package web;
option go_package = "web/v1;web";
import "validate/validate.proto";

// 头像上传接口请求参数
message UploadAvatarRequest{}

// 头像上传接口响应参数
message UploadAvatarResponse{
  string avatar = 1;
}

// 头像上传接口请求参数
message UploadImagerRequest{}

// 头像上传接口响应参数
message UploadImageResponse{
  string src = 1;
}


// 批量上传文件初始化接口请求参数
message UploadInitiateMultipartRequest{
  string file_name = 1 [(validate.rules).string.min_len = 1];
  int64 file_size = 2 [(validate.rules).int64.gte = 1];
}

// 批量上传文件初始化接口响应参数
message UploadInitiateMultipartResponse{
  string upload_id = 1;
  int32 shard_size = 2;
  int32 shard_num = 3;
}


// 批量上传文件接口请求参数
message UploadMultipartRequest{
  string upload_id = 1 [(validate.rules).string.min_len = 1];
  int32 split_index = 2 [(validate.rules).int32.gt = 0];
  int32 split_num = 3 [(validate.rules).int32.gt = 0];
}

// 批量上传文件接口请求参数
message UploadMultipartResponse{
  string upload_id = 1;
  bool is_merge = 2;
}